fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -155,8 +155,7 @@ nav {
 
 .banner p {
 padding: 15px;
-padding-top: 16px;
-margin-top: -1px;
+
 
   font-size: 1.2em;
   background-color: #0000007f;
